<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/l_padding"
        tools:context=".ui.details.DetailsFragment">

        <TextView
            android:id="@+id/tv_name"
            style="@style/st_for_tv_et"
            android:layout_marginTop="@dimen/fl_v_margin"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            style="@style/st_et"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/st_for_tv_et"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_company"
            style="@style/st_et"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <TextView
            android:id="@+id/tv_shoe_size"
            style="@style/st_for_tv_et"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_company" />

        <EditText
            android:id="@+id/et_shoe_size"
            style="@style/st_et"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_size" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/st_for_tv_et"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_size" />

        <EditText
            android:id="@+id/et_description"
            style="@style/st_et"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="150dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_background"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/fl_v_margin"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_cancel_background"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_add"
            app:layout_constraintTop_toTopOf="@id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btn_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>