<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onBoarding.OnBoardingFragment1">

        <TextView
            android:id="@+id/tv_app_info_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="normal"
            android:textSize="30sp"
            android:textColor="#0ebad9"
            android:lineSpacingExtra="-5sp"
            android:text="@string/app_info_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tv_app_info_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#555555"
            android:lineSpacingExtra="10sp"
            android:text="@string/app_info_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_app_info_1" />

        <ImageView
            android:id="@+id/btn_go_to"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_go_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_go"
            android:contentDescription="@string/go_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>