<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            tools:context=".ui.login.LoginFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <TextView
                android:id="@+id/tv_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:lineSpacingExtra="5sp"
                android:text="@string/sign_in"
                android:textColor="#333333"
                android:textSize="30sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/st_for_tv_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_password"
                style="@style/st_for_tv_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_password"
                style="@style/st_et"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@id/tv_password"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <TextView
                android:id="@+id/tv_wrongPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/incorrect_password"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="0dp"
                android:layout_height="55dp"
                style="@style/st_btn"
                android:text="@string/sign_in"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/tv_wrongPassword" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/forget_password"
                android:textColor="#323232"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/btn_signIn"
                app:layout_constraintTop_toBottomOf="@id/btn_signIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>